# flepiMoP

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  Docker.Rprofile  Dockerfile  NEWS.md  README.md  environment.yml  install_ubuntu.sh  local_install.R  minimal_interface.py
flepimop/gempyor_pkg/: .coverage  .gitignore  .pylintrc  conftest.py  pyproject.toml  setup.cfg
flepimop/gempyor_pkg/benchmarks/: __init__.py
flepimop/gempyor_pkg/docs/: Makefile  Rinterface.Rmd  Rinterface.html  click-man_parsing.py  click_documentation.py  integration_benchmark.ipynb  integration_doc.ipynb  interface.ipynb
flepimop/gempyor_pkg/docs/cli_man/: flepimop-batch-calibrate.1  flepimop-compartments-export.1  flepimop-compartments-plot.1  flepimop-compartments.1  flepimop-modifiers-config-plot.1  flepimop-modifiers.1  flepimop-patch.1  flepimop-simulate.1  flepimop-sync.1  flepimop.1
flepimop/gempyor_pkg/docs/source/: conf.py  index.rst
flepimop/gempyor_pkg/src/: __main__.py
flepimop/gempyor_pkg/src/gempyor/: __init__.py  _click.py  _jinja.py  _multiprocessing.py  _pydantic_ext.py  _slurm.py  batch.py  benchmark_utils.py  builder_utilities.py  calibrate.py  check_config.py  cli.py  compartments.py  config_validator.py  constants.py  deprecated_option.py  distributions.py  fepimop_push.py  file_paths.py  flepimop_push.py  flepisync.py  inference.py  inference_parameter.py  info.py  initial_conditions.py  interface.py  io.py  likelihoods.py  logging.py  logloss.py  loss.py  manifest.py  model_builder.py  model_info.py  model_meta.py  model_output.py  outcomes.py  parameters.py  postprocess_inference.py  project.py  (+22 more)
flepimop/gempyor_pkg/tests/: .coverage  .coverage.kojis-mbp-8.sph.ad.jhsph.edu.6457.826305
flepimop/gempyor_pkg/tests/_click/: test_duration_param_type_class.py  test_memory_param_type_class.py
flepimop/gempyor_pkg/tests/_jinja/: test__get_template.py  test__render_template.py  test__render_template_to_file.py  test__render_template_to_temp_file.py
flepimop/gempyor_pkg/tests/_pydantic_ext/: test__ensure_list.py  test__evaled_expression.py  test__evaled_expression_float.py  test__evaled_expression_int.py  test__override_or_val.py  test__read_and_validate_dataframe.py
flepimop/gempyor_pkg/tests/_slurm/: test__sbatch.py
flepimop/gempyor_pkg/tests/batch/: test__click_batch.py  test__click_submit.py  test__collect_submission_results.py  test__create_estimate_job_size_from_reference.py  test__format_resource_bounds.py  test__generate_job_sizes_grid.py  test__job_name.py  test__job_resources_from_size_and_inference.py  test__local.py  test__parse_extra_options.py  test__resolve_batch_system.py  test__resolve_batch_system_name.py  test__sbatch.py  test__submit_via_subprocess.py  test_batch_system_class.py  test_get_batch_system.py  test_job_resources_class.py  test_job_size_class.py  test_job_time_limit_class.py  test_local_batch_system.py  test_register_batch_system.py  test_slurm_batch_system.py  test_write_manifest.py
flepimop/gempyor_pkg/tests/cli/: test_flepimop_patch_cli.py
flepimop/gempyor_pkg/tests/compartments/: test__format_deep_nested_iterables.py  test_access_original_config_by_multi_index.py  test_compartments_class.py  test_format_nested_iterables.py  test_format_source.py  test_get_list_dimension.py  test_list_recursive_convert_to_string.py  test_unformat_nested_iterables.py  test_unformat_source.py
flepimop/gempyor_pkg/tests/data/: run_parallel_test_script.py
flepimop/gempyor_pkg/tests/distributions/: teset_beta_distribution_class.py  test_BinomialDistribution.py  test_FixedDistribution.py  test_LognormalDistribution.py  test_NormalDistribution.py  test_PoissonDistribution.py  test_UniformDistribution.py  test_WeibullDistribution.py  test_beta_distribution_class.py  test_binomial_distribution_class.py  test_distributions_abc.py  test_distributions_common.py  test_fixed_distribution_class.py  test_gamma_distribution_class.py  test_lognormal_distribution_class.py  test_normal_distribution_class.py  test_poisson_distribution_class.py  test_truncatednormal_distribution_class.py  test_uniform_distribution_class.py  test_weibull_distribution_class.py
flepimop/gempyor_pkg/tests/file_paths/: test__regularize_path.py  test_create_dir_name.py  test_create_file_name.py  test_create_file_name_for_push.py  test_create_file_name_without_extension.py  test_run_id.py
flepimop/gempyor_pkg/tests/inference/: test_get_static_arguments.py  test_inference.py
flepimop/gempyor_pkg/tests/inference_parameter/: test_inference_parameter_class.py
flepimop/gempyor_pkg/tests/info/: test__get_info.py  test__infer_cluster_from_fqdn.py  test_get_cluster_info.py
flepimop/gempyor_pkg/tests/npi/: config_npi.yml  (+9 more)
(+827 files in other folders)
