[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Joseph Lemaitre", email = "jo.lemaitresamra@gmail.com"},
    {name = "Joshua Kaminsky and others"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
description = "Generic epidemic compartmental modeling pipelines with interventions and outcome reporting."
dependencies = [
    "click>=8.1.7",
    "confuse",
    "dask[dataframe]",
    "emcee",
    "graphviz",
    "h5py",
    "Jinja2",
    "matplotlib",
    "numba>=0.53.1",
    "numpy",
    "pandas",
    "pyarrow",
    "pydantic>=2.11.0",
    "scipy",
    "seaborn",
    "sympy",
    "tqdm",
    "xarray",
]
name = "gempyor"
readme = "README.md"
requires-python = ">=3.10,<3.12"
version = "2.1"

[project.optional-dependencies]
aws = ["boto3", "botocore"]
dev = ["pytest", "mock", "pylint", "black"]

[project.urls]
Homepage = "https://www.flepimop.org/"
Issues = "https://github.com/HopkinsIDD/flepiMoP/issues"

[project.scripts]
flepimop = "gempyor.cli:cli"
flepimop-calibrate = "gempyor.calibrate:calibrate"
gempyor-simulate = "gempyor.simulate:_deprecated_simulate"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
package-data = { "gempyor" = ["templates/*.j2"] }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
