[metadata]
name = gempyor
version = 2.1
author = Joseph Lemaitre, Joshua kaminski and others
author_email = jo.lemaitresamra@gmail.com, jkaminsky@jhu.edu
description = General Epidemics Modeling Pipeline with Yterventions and Outcome Reporting, GEMPYOR: a large scale infectious disease dynamics model with configurable compartmental graph structure and interventions. Simulate metapopulation spread and health outcomes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HopkinsIDD/flepiMoP
project_urls =
    Bug Tracker = https://github.com/HopkinsIDD/flepiMoP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numba >=0.53.1
    pandas
    numpy
    seaborn
    tqdm
    matplotlib
    xarray
    emcee
    click
    confuse
    pyarrow
    sympy
    dask
    scipy
    graphviz
    boto3

# see https://stackoverflow.com/questions/58826164/dependencies-requirements-for-setting-up-testing-and-installing-a-python-lib
# installed for pip install -e ".[test]"
[options.extras_require]  
test =
    pytest
    mock


[options.entry_points]
console_scripts =
    gempyor-outcomes = gempyor.simulate_outcome:simulate
    flepimop = gempyor.cli:cli
    gempyor-seir = gempyor.simulate_seir:simulate
    gempyor-simulate = gempyor.simulate:simulate
    flepimop-calibrate = gempyor.calibrate:calibrate

[options.packages.find]
where = src

